<resources>
    <string name="app_name">GiziWise</string>
    <string name="costum_email">Masukkan Email</string>
    <string name="costum_password">Masukkan Kata Sandi</string>
    <string name="error_password">Kata sandi harus minimal 8</string>
    <string name="error_email">Email harus valid</string>
    <string name="costum_inputname">Masukkan Nama</string>
    <string name="error_inputname">Nama wajib diisi</string>
    <string name="login_button">MASUK</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="sudah_punya_akun">Sudah punya akun</string>
    <string name="signup_button">DAFTAR</string>
    <string name="gizewise_cd">GizeWise</string>
    <string name="tittle_home">Beranda</string>
    <string name="tittle_camera">Kamera</string>
    <string name="tittle_article">Artikel</string>
    <string name="tittle_recipe">Resep</string>
    <string name="tittle_account">Akun</string>
    <string name="search_home">Cari Nutrisi dengan Gambar</string>
    <string name="search_recipe">Cari Resep Masakan</string>
    <string name="recipe_populer">Resep Populer</string>
    <string name="search_article">Cari Artikel</string>
    <string name="tips_diet">Tips Diet Sehat dan Bugar</string>
    <string name="article_lainnya">Lainnya</string>
    <string name="search_history">Cari History Pencarian</string>
    <string name="imageview_camera">preview</string>
    <string name="camera_button">KAMERA</string>
    <string name="searchbutton_camera">CARI</string>
    <string name="gallery_button">GALERI</string>
    <string name="recomendation_home">Rekomendasi</string>
    <string name="article_home">Artikel Kesehatan</string>
    <string name="recipe_home">Resep Sehat</string>
    <string name="giziwase_image">giziwase_image</string>
    <string name="history_name">Nama History</string>
    <string name="back">back</string>
    <string name="result">Hasil :</string>
    <string name="edit_profile">Edit</string>
    <string name="edit_profile_batal">Batal</string>
    <string name="edit_profile_simpan">Simpan</string>
    <string name="nama_user">Natalie Samona</string>
    <string name="simpan">SIMPAN</string>
    <string name="keluar">Keluar</string>
    <string name="nama_resep">Nama Resep</string>
    <string name="bahan_resep">Bahan resep</string>
    <string name="instruksi_resep">Insruksi Resep</string>
    <string name="name_user">Nama</string>
    <string name="nama_depan_user">Nama Depan</string>
    <string name="nama_belakang_user">Nama Belakang</string>
    <string name="email_user">Email</string>
    <string name="berat_user">Berat</string>
    <string name="tinggi_user">Tinggi</string>
    <string name="umur_user">Umur</string>
    <string name="article_image">article_image</string>
    <string name="judul_artikel">Tips Hidup Sehat</string>
    <string name="isi_artikel">Ingin menurunkan berat badan dengan sehat dan benar? Yuk, ikuti tips diet sehat agar tubuh dan jiwa Sahabat MIKA tetap bugar ...</string>
</resources>