<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".signup.SignUpActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:alpha="1"
        android:contentDescription="@string/gizewise_cd"
        android:src="@drawable/signup"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.hera.giziwise.ui.costumview.EditTextInputName
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:alpha="1"
        android:background="@drawable/costum_input"
        android:drawableStart="@drawable/costum_icon_person"
        android:drawablePadding="12dp"
        android:hint="@string/costum_inputname"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <com.hera.giziwise.ui.costumview.EditTextEmail
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:alpha="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:background="@drawable/costum_input"
        android:hint="@string/costum_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <com.hera.giziwise.ui.costumview.EditTextPassword
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:alpha="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:background="@drawable/costum_input"
        android:inputType="textPassword"
        android:hint="@string/costum_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="1"
        android:text="@string/signup_button"
        android:textSize="18dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pass" />

    <TextView
        android:id="@+id/tv_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="1"
        android:text="@string/sudah_punya_akun"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:alpha="1"
        android:text="@string/masuk"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tv_have_acc"
        app:layout_constraintTop_toBottomOf="@id/btn_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>