<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.recipe.InstruksiResepActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="41dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/preview_image"
                android:layout_width="411dp"
                android:layout_height="291dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imageview_camera"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_image" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/darkgrey"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.727"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_image"
                app:layout_constraintVertical_bias="0.031"
                android:text="@string/nama_resep"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/rectangle"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/result"
                tools:layout_editor_absoluteX="-1dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_effect"
                    android:gravity="center"
                    android:onClick="button"
                    android:text="Bahan-bahan"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_effect"
                    android:gravity="center"
                    android:onClick="button"
                    android:text="Instruksi"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/bahan_bahan"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.287"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0"
                android:text="@string/instruksi_resep" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>